--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,10 +1,7 @@
 {
-   "version": 2,
-   "name": "music-album",
-   "builds": [
-      { "src": "app.js", "use": "@vercel/node" }
-   ],
-   "routes": [
-      { "src": "/(.*)", "dest": "/app.js" }
+   "builds":[
+      { "src": "*.html", "use": "@vercel/static" },
+      { "src": "*.py", "use": "@vercel/python" },
+      { "src": "*.js", "use": "@vercel/node" }
    ]
 }
